syntax = "proto3";

package user;

option go_package = "proto/userpb";

message GetUserInfoRequest {
    int64 user_id = 1;
}

message GetUserInfoResult {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

service UserService {
    rpc GetUserInfoByUserID(GetUserInfoRequest) returns (GetUserInfoResult);
}